--- a/README
+++ b/README
@@ -4,5 +4,52 @@
 
 'sociobot' 
 
+# hostage
+https://en.wikipedia.org/wiki/Hostage
+
+# stretcher
+https://en.wikipedia.org/wiki/Stretcher
+
+# anesthesia
+https://en.wikipedia.org/wiki/Anesthesia
+
+# stabbing
+https://en.wikipedia.org/wiki/Stabbing
+
+# syringe
+https://en.wikipedia.org/wiki/Syringe
+
+# depot injection
+https://en.wikipedia.org/wiki/Depot_injection
+
+# buttocks
+https://en.wikipedia.org/wiki/Buttocks
+
+# verminken
+https://en.wiktionary.org/wiki/verminken
+
+# basal ganglia
+https://en.wikipedia.org/wiki/Basal_ganglia
+
+# substantial nigra
+https://en.wikipedia.org/wiki/Substantia_nigra
+
+# ventral tegmental area
+https://en.wikipedia.org/wiki/Ventral_tegmental_area
+
+# neuron
+https://en.wikipedia.org/wiki/Neuron
+
+# dopamine
+https://en.wikipedia.org/wiki/Dopamine
+
+# Dopamine_receptor_D2
+https://en.wikipedia.org/wiki/Dopamine_receptor_D2
+
+# neuroleptic malignant syndrome
+https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
+
+# neurodegeneration
+https://en.wikipedia.org/wiki/Neurodegeneration
 
 robot doctors at work
