--- a/README
+++ b/README
@@ -56,4 +56,5 @@ https://en.wikipedia.org/wiki/Neuroleptic_malignant_syndrome
 # neurodegeneration
 https://en.wikipedia.org/wiki/Neurodegeneration
 
-robot doctors at work
+robodoc at work
+
